--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 h1 {
     font-weight: bold;
-    font-size: 8vh;
     color: #d91414;
     outline-color: black;
+    font-size: 3em;
 }
 
 h2 {
@@ -16,82 +16,60 @@ h3 {
     font-size: 4vh;
 }
 
-#intro {
-    font-size: 3vh;
-    float: left;
-    padding-top: 2.5vh;
-    width: 40%;
-}
-
-#links {
-    float: left;
-    width: 40%;
-
-}
-
-footer {
-    float: none;
-}
-
 p {
-    padding-left: 7vw;
-    padding-right: 7vw;
-    padding-bottom: 3vh;
     font-size: 2.5vh;
 }
 
 #titleBar {
     width: 100%;
-    height: 21vh;
     background-color: rgb(165, 159, 159);
     text-align: center;
-    padding: 0px;
-    margin: 0px;
     padding-top: 4vh;
     padding-bottom: 4vh;
 }
 
 body {
     background-color: tan;
-    float: left;
+    width: calc(100% - 16px);
+    margin: 8px;
 }
 
 #mainBody {
     background-color: tan;
+    max-width: 1200px;
+    margin: auto;
+    justify-content: space-between;
+    display: flex;
 }
 
-@media only screen and (max-width: 800px) {
-    #intro {
-        float: none;
-        width: 100%;
+#introDiv {
+    width: 45%;
+}
+
+#introDiv p {
+    font-size: 3vh;
+    padding-top: 2.5vh;
+}
+
+#links {
+    width: 45%;
+}
+
+@media (max-width : 800px) {
+    #mainBody {
+        flex-direction: column;
+        align-items: center;
+    }
+    #introDiv {
+        width: 90%;
     }
 
+
     #links {
-        float: none;
-        width: 100%;
+        width: 90%;
     }
 
     h1 {
-        font-size: 8vh;
-    }
-
-    p {
-        padding-left: 1vw;
-        padding-right: 1vw;
-        font-size: 2.25vh;
-    }
-
-    #intro {
-        font-size: 2.5vh;
-    }
-
-    #introDiv {
-        margin: 0px;
-        padding: 0px;
-    }
-
-    #titleBar {
-        padding-top: 1vh;
-        height: 21vh;
+        font-size: 2em;
     }
 }
