--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 h1 {
     font-weight: bold;
-    font-size: 9vh;
+    font-size: 8vh;
     color: #d91414;
     outline-color: black;
 }
@@ -29,18 +29,24 @@ h3 {
 
 }
 
+footer {
+    float: none;
+}
+
 p {
-    padding-left: 9vw;
-    padding-right: 9vw;
+    padding-left: 7vw;
+    padding-right: 7vw;
     padding-bottom: 3vh;
     font-size: 2.5vh;
 }
 
 #titleBar {
-    width: 100vw;
-    height: 20vh;
+    width: 100%;
+    height: 21vh;
     background-color: rgb(165, 159, 159);
     text-align: center;
+    padding: 0px;
+    margin: 0px;
     padding-top: 4vh;
     padding-bottom: 4vh;
 }
@@ -52,4 +58,40 @@ body {
 
 #mainBody {
     background-color: tan;
+}
+
+@media only screen and (max-width: 600px) {
+    #intro {
+        float: none;
+        width: 100%;
+    }
+
+    #links {
+        float: none;
+        width: 100%;
+    }
+
+    h1 {
+        font-size: 8vh;
+    }
+
+    p {
+        padding-left: 1vw;
+        padding-right: 1vw;
+        font-size: 2.25vh;
+    }
+
+    #intro {
+        font-size: 2.5vh;
+    }
+
+    #introDiv {
+        margin: 0px;
+        padding: 0px;
+    }
+
+    #titleBar {
+        padding-top: 1vh;
+        height: 21vh;
+    }
 }
