Changed font to roboto

--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@ body {
     background-color: tan;
     width: calc(100% - 16px);
     margin: 8px;
+    font-family: 'Roboto', sans-serif;
 }
 
 #mainBody {
