--- a/main.css
+++ b/main.css
@@ -1,59 +1,78 @@
+body {
+    background-color: rgb(0, 0, 0);
+    color: #e6e6e8;
+    width: calc(100% - 16px);
+    font-family: 'Roboto', sans-serif;
+}
+
+a {
+    color: rgb(0, 171, 250);
+}
+
+a:visited {
+    color: rgb(0, 171, 250);
+}
+
 h1 {
     font-weight: bold;
-    color: #d91414;
+    color: #d41919;
     outline-color: black;
     font-size: 3em;
 }
 
 h2 {
-    padding-left: 3vw;
-    font-size: 5vh;
+    /* padding-left: 3vw; */
+    font-size: 4.5vh;
 }
 
 h3 {
-    padding-left: 6vw;
-    margin: 0px;
-    font-size: 4vh;
+    /* padding-left: 6vw; */
+    /* margin: 0px; */
+    text-align: center;
+    font-size: 3.5vh;
+    text-decoration: underline;
 }
 
 p {
-    font-size: 2.5vh;
+    font-size: 2.3vh;
 }
 
 #titleBar {
     width: 100%;
-    background-color: rgb(165, 159, 159);
+    background-color: rgb(175, 170, 170);
     text-align: center;
     padding-top: 4vh;
     padding-bottom: 4vh;
 }
 
-body {
-    background-color: tan;
-    width: calc(100% - 16px);
-    margin: 8px;
-    font-family: 'Roboto', sans-serif;
+
+#main {
+    padding: 4vw;
 }
 
 #mainBody {
-    background-color: tan;
-    max-width: 1200px;
-    margin: auto;
+    background-color: rgb(44, 44, 44);
+    /* max-width: 1200px; */
+    /* margin: auto; */
     justify-content: space-between;
     display: flex;
 }
 
 #introDiv {
-    width: 45%;
+    width: 60%;
+    padding: 2%;
 }
 
 #introDiv p {
-    font-size: 3vh;
+    font-size: 2.5vh;
+    /* padding: 5%; */
     padding-top: 2.5vh;
 }
 
 #links {
-    width: 45%;
+    width: 30%;
+    background-color: #300032;
+    padding: 2%;
 }
 
 @media (max-width : 800px) {
@@ -68,6 +87,11 @@ body {
 
     #links {
         width: 90%;
+        margin-top: 3%;
+    }
+
+    #links p {
+        font-size: 2.5vh;
     }
 
     h1 {
