--- a/main.css
+++ b/main.css
@@ -15,9 +15,11 @@ a:visited {
 
 h1 {
     font-weight: bold;
-    color: #d41919;
+    color: #000000;
+    text-shadow: -2px 2px 3px white;
     outline-color: black;
     font-size: 3em;
+    font-family: 'Permanent Marker', cursive;
 }
 
 h2 {
@@ -39,7 +41,7 @@ p {
 
 #titleBar {
     width: 100%;
-    background-color: rgb(175, 170, 170);
+    background-color: rgb(180, 10, 10);
     text-align: center;
     padding-top: 4vh;
     padding-bottom: 4vh;
