--- a/main.css
+++ b/main.css
@@ -3,6 +3,10 @@ body {
     color: #e6e6e8;
     width: calc(100% - 16px);
     font-family: 'Roboto', sans-serif;
+    background-image: url('Boston_Skyline_Panorama_Dusk_Edit_1.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 a {
@@ -45,8 +49,9 @@ p {
     text-align: center;
     padding-top: 4vh;
     padding-bottom: 4vh;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
-
 
 #main {
     padding: 4vw;
@@ -77,7 +82,7 @@ p {
     padding: 2%;
 }
 
-@media (max-width : 800px) {
+@media (max-width: 800px) {
     #mainBody {
         flex-direction: column;
         align-items: center;
@@ -85,17 +90,13 @@ p {
     #introDiv {
         width: 90%;
     }
-
-
     #links {
         width: 90%;
         margin-top: 3%;
     }
-
     #links p {
         font-size: 2.5vh;
     }
-
     h1 {
         font-size: 2em;
     }
