--- a/main.css
+++ b/main.css
@@ -29,6 +29,7 @@ h1 {
 h2 {
     /* padding-left: 3vw; */
     font-size: 4.5vh;
+    font-family: 'Acme', sans-serif;
 }
 
 h3 {
@@ -37,10 +38,13 @@ h3 {
     text-align: center;
     font-size: 3.5vh;
     text-decoration: underline;
+    font-family: 'Merriweather', sans-serif;
 }
 
 p {
     font-size: 2.3vh;
+    text-align: center;
+    font-family: 'Noto Serif', sans-serif;
 }
 
 #titleBar {
@@ -74,6 +78,7 @@ p {
     font-size: 2.5vh;
     /* padding: 5%; */
     padding-top: 2.5vh;
+    text-align: center;
 }
 
 #links {
