--- a/main.css
+++ b/main.css
@@ -27,24 +27,19 @@ h1 {
 }
 
 h2 {
-    /* padding-left: 3vw; */
-    font-size: 4.5vh;
     font-family: 'Acme', sans-serif;
 }
 
 h3 {
-    /* padding-left: 6vw; */
-    /* margin: 0px; */
     text-align: center;
-    font-size: 3.5vh;
     text-decoration: underline;
     font-family: 'Merriweather', sans-serif;
 }
 
 p {
-    font-size: 2.3vh;
     text-align: center;
     font-family: 'Noto Serif', sans-serif;
+    font-size: 1.2em;
 }
 
 #introDiv p {
@@ -68,8 +63,6 @@ p {
 
 #mainBody {
     background-color: rgb(44, 44, 44);
-    /* max-width: 1200px; */
-    /* margin: auto; */
     justify-content: space-between;
     display: flex;
 }
@@ -80,8 +73,6 @@ p {
 }
 
 #introDiv p {
-    font-size: 2.5vh;
-    /* padding: 5%; */
     padding-top: 2.5vh;
     text-align: center;
 }
